# esound_new

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build.sh
src/: auth.py  config.py  di.py  filemanager.py  helpers.py  main.py  migrate.py
src/database/: base.sql  database.py
src/database/models/: song.py
src/graphql/: get_library.gql  remove_song.gql  save_song.gql  save_to_library.gql
src/models/: add_library_song.py  esound_library.py  ytmusic_song.py
src/services/: esound.py  graphql.py  ytmusicapi.py
