[tool.poetry]
name = "yt2esound"
version = "0.1.0"
description = ""
authors = ["Muhammed Kaplan <mmuhammedkaplan0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
ytmusicapi = "^1.3.0"
colorama = "^0.4.6"
gql = "^3.4.1"
aiofiles = "^23.2.1"
asyncio = "^3.4.3"
pyyaml = "^6.0.1"
dependency-injector-fork = "^4.42.1"
aiohttp = "^3.8.6"
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
